<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#272424"
    android:id="@+id/update_profile">

    <!--    <ImageView-->
    <!--        android:id="@+id/backButton"-->
    <!--        android:layout_width="48dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginStart="4dp"-->
    <!--        android:src="@drawable/icons8_back_button"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/tvUpdateProfile"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="1.0" />-->



    <ImageView
        android:id="@+id/imgProfilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:hint="Full name"
        android:textColorHint="#808080"
        android:textColor="#131313"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/imgProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!--    <EditText-->
    <!--        android:id="@+id/etAge"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:background="@drawable/edittext_background"-->
    <!--        android:padding="12dp"-->
    <!--        android:hint="Age"-->
    <!--        android:textColorHint="#808080"-->
    <!--        android:textColor="#131313"-->
    <!--        android:inputType="number"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/etFullName"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginEnd="24dp" />-->
    <LinearLayout
        android:id="@+id/geoLocationContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/etEmailAddress"
        app:layout_constraintStart_toStartOf="@id/etEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/etEmailAddress"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Geolocation"
            android:textSize="16sp"
            android:textColor="#121111"
            android:gravity="start" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchGeolocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:switchMinWidth="48dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:hint="Email address"
        android:textColorHint="#808080"
        android:textColor="#131313"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/etFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/icons8_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/confirm_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Do you want to delete this event?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_linear_layout"
        android:gravity="center_horizontal"
        android:paddingBottom="8sp"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/delete_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/back_next_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/switchTrack"
            android:text="Cancel"
            android:layout_marginEnd="16sp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/black"
            android:text="Delete"
            android:visibility="visible"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/error_red"
            android:text="Confirm"
            android:layout_marginStart="16sp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/back_next_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/previous_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_back_24" />

        <Button
            android:id="@+id/next_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_forward_24" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>