<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".EventDetailsFragment">



    <ImageView
        android:id="@+id/posterView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/no_image_source"
        android:background="@color/greyish"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/event_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="Name: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_detail_start_date"/>

    <TextView
        android:id="@+id/event_detail_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:text="Organized by: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_detail_name"/>

    <TextView
        android:id="@+id/event_detail_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:text="Description: "
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_detail_location"/>


    <TextView
        android:id="@+id/event_detail_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Starts: "
        app:layout_constraintEnd_toStartOf="@id/event_detail_end_date"
        app:layout_constraintTop_toBottomOf="@id/posterView"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/event_detail_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Ends:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterView" />

    <TextView
        android:id="@+id/event_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:text="Location: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_detail_organizer" />

    <Button
        android:id="@+id/view_announcements_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Announcements"
        app:layout_constraintTop_toBottomOf="@id/event_detail_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/icons8_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/confirm_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Do you want to delete this event?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_linear_layout"
        android:gravity="center_horizontal"
        android:paddingBottom="8sp"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/delete_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/back_next_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/green2"
            android:text="Cancel"
            android:layout_marginEnd="16sp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/black"
            android:text="Delete"
            android:visibility="visible"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@color/red2"
            android:text="Confirm"
            android:layout_marginStart="16sp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/back_next_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/previous_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_back_24" />

        <Button
            android:id="@+id/next_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_forward_24" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>